used fixed position for popup so when it is included within other containers we do not cause scrollbars

--- a/src/hierarchical-selector.less
+++ b/src/hierarchical-selector.less
@@ -99,6 +99,10 @@
     }
   }
 
+  div.fixedPos {
+    position: fixed;
+  }
+
   .tree-view {
     position:absolute;
     max-height: 300px;
